--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Landing Page</title>
         <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
 
     <body>
@@ -34,20 +35,26 @@
         </div>
         <div class="pictures">
             <div class="title">
-        
+            Some random information
+            </div>
+            <div class="container">
+            <div class="info">
+            <img src="./images/placeholderpride.png" alt="pride">
+            <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-
+            <img src="./images/placeholderpride.png" alt="pride">
+            <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-
+            <img src="./images/placeholderpride.png" alt="pride">
+            <div class="text">this is some subtext under an illustration or image</div>
             </div>
             <div class="info">
-
+            <img src="./images/placeholderpride.png" alt="pride">
+            <div class="text">this is some subtext under an illustration or image</div>
             </div>
-            <div class="info">
-
-            </div>
+        </div>
         </div>
         <div class="testimonial">
             <div class="quote">
