Add testimonial section
Ensure flexibility

--- a/index.html
+++ b/index.html
@@ -57,17 +57,22 @@
         </div>
         </div>
         <div class="testimonial">
+            <div class="test-inner">
             <div class="quote">
-                "I love eating"
+                "I love eating. The taste of food, the feeling of it
+                travelling through me and powering my inner workings, my god,
+                what a blessed privilege we have been born with!"
             </div>
             <div class="quoter">
-                -Bobby brown
+                - GreekgodX, BIG man of the year
+            </div>
             </div>
         </div>
         <div class="AD">
             <div class="container">
                 <div class="left">
-                    Call to Action
+                    <h2>Call to Action</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <div class="right">
                     <button type="button">Hello!</button>
