Add temp. CtoA/Footer
Remember, ensure flexibility. Made graphical clarity

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <div class="right">
-                    <button type="button">Hello!</button>
+                    <button type="button">Hi Sally</button>
                 </div>
             </div>
         </div>
         <div class="footer">
-            Copyright
+            Copyright © Gay Inc. 2022
         </div>
     </body>
 </html>
