Finish EEAAO header
Add hover interactivity. Customize text, background, and images

--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
     <body>
         <div class="header">
             <div class="top_h">
-                <div class="logo">
-                    Header Logo
+                <div class="logo">      
+                   
                 </div>
-                <ul>
-                    <li><a>header link one</a></li>
-                    <li><a>header link two</a></li>
-                    <li><a>header link three</a></li>
+                    <ul>
+                    <li class="one"><a href="google.com">Continue scrolling</a></li>
+                    <li class="two"><a href="google.com"><span>EMBRACE THE BAGEL</span>EMBRACE THE BAGEL
+                    <span>EMBRACE THE BAGEL</span></a></li>
+                    <li class="three"><a href="google.com"g>Exit the site</a></li>
                 </ul>
             </div>
             <div class="bottom_h">
                 <div class="left-bot">
-                    <h1>This website is awesome</h1>
-                    <p>This website has some subtext that goes here under
-                        the main title. It's a smaller font and the color
-                        is lower contrast
+                    <h1>I. Everything</h1>
+                    <p>Infinite universes exist, but a mysterious <span>force</span> is
+                    threatening to destroy <span>all</span> that we know. Will you join in the
+                    fight for freedom to help defeat it? 
                     </p>
-                    <button class="button">Sign up</button>
+                    <button class="button">Join the fight?</button>
                 </div>
                 <div class="right-bot">
-                    <img src="./images/placeholderpride.png" alt="pride">
+                    <img src="./images/headergif.gif" alt="pride">
                 </div>
             </div>
         </div>
