Add jobu header
Download gifs, add top_h/button animations

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
                     
                 </div>
                     <ul>
-                    <li class="one"><a href="google.com">Continue scrolling</a></li>
-                    <li class="two"><a href="google.com"><span>EMBRACE THE BAGEL</span>EMBRACE THE BAGEL
+                    <li class="one"><a href="google.com">Alpha-verse</a></li>
+                    <li class="two" onClick="changePage()"><a><span>EMBRACE THE BAGEL</span>EMBRACE THE BAGEL
                     <span>EMBRACE THE BAGEL</span></a></li>
-                    <li class="three"><a href="google.com"g>Exit the site</a></li>
+                    <li class="three"><a href="google.com">Our hope</a></li>
                 </ul>
             </div>
             <div class="bottom_h">
                 <div class="left-bot">
-                    <h1>I. Everything</h1>
-                    <p>Infinite universes exist, but a mysterious <span>force</span> is
+                    <h1 class="everything">I. Everything</h1>
+                    <p class="para">Infinite universes exist, but a mysterious <span>force</span> is
                     threatening to destroy <span>all</span> that we know. Will you join in the
                     fight for freedom to help defeat it? 
                     </p>
-                    <button class="button">Join the fight?</button>
+                    <button class="button" onClick="changePage()">Join the fight?</button>
                 </div>
                 <div class="right-bot">
                     <img src="./images/headergif.gif" alt="pride">
@@ -55,15 +55,38 @@
             <div class="text">Our Allies</div>
             </div>
             <div class="info4">
-            <img src="./images/lovable.jpeg" alt="loveable">
+            <img src="./images/lovable.jpg" alt="loveable">
             <div class="text">What we fight for</div>
             </div>
         </div>
         </div>
         </div>
         <div id="page2">
-            <h1 onClick="changePage()">Hi!</h1>
-        
+            <div class="j_header">
+                <div class="top_hj">
+                    <div class="logo">
+                        <img src="./images/logo.jpg" class="logo" onClick="changePage()" alt="googly">
+                    </div>
+                    <ul>
+                        <li><a>Why</a></li>
+                        <li><a><span class="glitch even">even</span></a></li>
+                        <li class="bother" onClick="changePage()"><a><span>bother?</span>bother?<span>bother?</span></a></li>
+                    </ul>
+                </div>
+                <div class="j_bottom_h">
+                    <div class="j-left-bot">
+                        <h1 class="everything">I. <span class="glitch">E</span>VE<span class="glitch">RY</span>TH<span class="glitch">IN</span>G</h1>
+                        <p class="para">Look at it, can you see anything different? The truth is, I didn't 
+                        create the bagel cause I wanted to <em>destroy</em> the world. I just wanted 
+                        to see if I could die, like truly disappear. Tell me, am I wrong for that?
+                        </p>
+                        <button class="button" onClick="changePage()">?</button>
+                    </div>
+                    <div class="j-right-bot">
+                        <img src="./images/lookatit.gif" alt="bagel" class="bagel">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="testimonial">
             <div class="test-inner">
