--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@
                 The basic know-how's
             </div>
             <div class="container">
-            <div class="info1">
-            <img src="./images/versejump.jpg" alt="versejump">
-            <div class="text">Verse Jumping</div>
+                <div class="info1">
+                    <img src="./images/versejump.jpg" alt="versejump">
+                    <div class="text">Verse Jumping</div>
+                </div>
+                <div class="info2">
+                    <img src="./images/jobu.gif" alt="jobu">
+                    <div class="text">Jobu Tupaki</div>
+                </div>
+                <div class="info3">
+                    <img src="./images/raccoon.gif" alt="racoon">
+                    <div class="text">Our Allies</div>
+                </div>
+                <div class="info4">
+                    <img src="./images/lovable.jpg" alt="loveable">
+                    <div class="text">What we fight for</div>
+                </div>
             </div>
-            <div class="info2">
-            <img src="./images/jobu.gif" alt="jobu">
-            <div class="text">Jobu Tupaki</div>
-            </div>
-            <div class="info3">
-            <img src="./images/raccoon.gif" alt="racoon">
-            <div class="text">Our Allies</div>
-            </div>
-            <div class="info4">
-            <img src="./images/lovable.jpg" alt="loveable">
-            <div class="text">What we fight for</div>
-            </div>
-        </div>
         </div>
         </div>
         <div id="page2">
@@ -84,6 +84,39 @@
                     </div>
                     <div class="j-right-bot">
                         <img src="./images/lookatit.gif" alt="bagel" class="bagel">
+                    </div>
+                </div>
+            </div>
+            <div class="j_pictures">
+                <div class="j_title">The <span class="glitch">Boring</span> stuff</div>
+                <div class="j_container">
+                    <div class="info1">
+                        <div class="bagels">
+                            <img class="hole1" src="./images/j-versejump.gif" alt="versejump">
+                            <img class="hole2" src="./images/placeholder.png" alt="hole">
+                        </div>
+                        <div class="j-text">Funsies!</div>
+                    </div>
+                    <div class="info2">
+                        <div class="bagels">
+                            <img class="hole1" src="./images/jobualt.gif" alt="jobu">
+                            <img class="hole2" src="./images/thatbitch.gif" alt="hole">
+                        </div>
+                        <div class="j-text"><span class="glitch">That</span> Bitch</div>
+                    </div>
+                    <div class="info3">
+                        <div class="bagels">
+                            <img class="hole1" src="./images/butthole.jpg" alt="buttfighters">
+                            <img class="hole2" src="./images/placeholder.png" alt="hole">
+                        </div>
+                        <div class="j-text">..Minions!</div>
+                    </div>
+                    <div class="info4">
+                        <div class="bagels">
+                            <img class="hole1" src="./images/black.jpg" alt="loveable">
+                            <img class="hole2" src="./images/rocks.gif" alt="hole">
+                        </div>
+                        <div class="j-text">What <span class="glitch">I</span> fight for</div>
                     </div>
                 </div>
             </div>
