Add Waymond testimonial
Download gif, add parallax scrolling, padding, and custom quote

--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
         </div>
         <div class="testimonial">
             <div class="test-inner">
-            <div class="quote">
-                "I love eating. The taste of food, the feeling of it
-                travelling through me and powering my inner workings, my god,
-                what a blessed privilege we have been born with!"
-            </div>
-            <div class="quoter">
-                - GreekgodX, BIG man of the year
-            </div>
+                <div class="quote">
+                    All day... I don't know what the heck is going on. But somehow... 
+                    this feels like it's all my fault. I don't know. The only thing I do know... is that we have to be kind. 
+                    Please. Be kind... especially when we don't know what's going on.
+                </div>
+                <div class="quoter">
+                    <a href="https://m.imdb.com/title/tt6710474/characters/nm0702841?ref_=tt_cl_c_3">- Waymond Wang</a>
+                </div>
             </div>
         </div>
         <div class="AD">
