Add jobu testimonial
Put new text and background gif, add interactive .j_quoter

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
                 </div>
             </div>
         </div>
+        <div class="testimonial">
+            <div class="test-inner">
+                <div class="quote">
+                    All day... I don't know what the heck is going on. But somehow... 
+                    this feels like it's all my fault. I don't know. The only thing I do know... is that we have to be kind. 
+                    Please. Be kind... especially when we don't know what's going on.
+                </div>
+                <div class="quoter">
+                    <a href="https://m.imdb.com/title/tt6710474/characters/nm0702841?ref_=tt_cl_c_3">- Waymond Wang</a>
+                </div>
+            </div>
+        </div>
         </div>
         <div id="page2">
             <div class="j_header">
@@ -77,9 +89,9 @@
                     <div class="j-left-bot">
                         <h1 class="everything">I. <span class="glitch">E</span>VE<span class="glitch">RY</span>TH<span class="glitch">IN</span>G</h1>
                         <p class="para">Look at it, can you see anything different? The truth is, I didn't 
-                        create the bagel cause I wanted to <em>destroy</em> the world. I just wanted 
-                        to see if I could die, like truly disappear. Tell me, am I wrong for that?
-                        </p>
+                        create the bagel cause I wanted to <em>destroy</em> everything. It was to
+                        destroy myself. I wanted to see if I went in, could I finally escape? Like, <em>actually</em> die.
+                        Am I wrong for that?</p>
                         <button class="button" onClick="changePage()">?</button>
                     </div>
                     <div class="j-right-bot">
@@ -120,16 +132,14 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="testimonial">
-            <div class="test-inner">
-                <div class="quote">
-                    All day... I don't know what the heck is going on. But somehow... 
-                    this feels like it's all my fault. I don't know. The only thing I do know... is that we have to be kind. 
-                    Please. Be kind... especially when we don't know what's going on.
-                </div>
-                <div class="quoter">
-                    <a href="https://m.imdb.com/title/tt6710474/characters/nm0702841?ref_=tt_cl_c_3">- Waymond Wang</a>
+            <div class="j_testimonial">
+                <div class="j-test-inner">
+                    <div class="j_quote">
+                        See, I CAN walk through you.
+                    </div>
+                    <div class="j_quoter">
+                        Jobu Tupaki
+                    </div>
                 </div>
             </div>
         </div>
