Add custom CtoA/footer, make direc. for styles.css
Add interactive button/new animation, change footer background color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Landing Page</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./styles/style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
 
@@ -144,18 +144,23 @@
             </div>
         </div>
         <div class="AD">
-            <div class="container">
+            <div class="ad_container">
                 <div class="left">
-                    <h2>Call to Action</h2>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <h2 class="CtoA">Does something just feel off?</h2>
+                    <p class="signup">You might be eligible for one free <span class="verse">verse jump</span>
+                    Click that button!
+                    </p>
+                    <p class="finetext">conditions include: willingness to eat chapstick,
+                    affinity for kung-fu, and/or being the worst version of yourself
+                    </p>
                 </div>
                 <div class="right">
-                    <button type="button">Hi Sally</button>
+                    <button class="jump">Jump!</button>
                 </div>
             </div>
         </div>
         <div class="footer">
-            Copyright © Gay Inc. 2022
+            Copyright © WeLoveWaymond Inc.
         </div>
         <script src="./javascript/javascript.js"></script>
     </body>
