--- a/index.html
+++ b/index.html
@@ -72,6 +72,25 @@
                 </div>
             </div>
         </div>
+        <div class="AD">
+            <div class="ad_container">
+                <div class="left">
+                    <h2 class="CtoA">Does something just feel off?</h2>
+                    <p class="signup">You might be eligible for one free <span class="verse">verse jump</span>
+                    Click that button!
+                    </p>
+                    <p class="finetext">conditions include: willingness to eat chapstick,
+                    affinity for kung-fu, and/or being the worst version of yourself
+                    </p>
+                </div>
+                <div class="right">
+                    <button class="jump">Jump!</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            Copyright © WeLoveWaymond Inc.
+        </div>
         </div>
         <div id="page2">
             <div class="j_header">
@@ -142,25 +161,24 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="AD">
-            <div class="ad_container">
-                <div class="left">
-                    <h2 class="CtoA">Does something just feel off?</h2>
-                    <p class="signup">You might be eligible for one free <span class="verse">verse jump</span>
-                    Click that button!
-                    </p>
-                    <p class="finetext">conditions include: willingness to eat chapstick,
-                    affinity for kung-fu, and/or being the worst version of yourself
-                    </p>
-                </div>
-                <div class="right">
-                    <button class="jump">Jump!</button>
+            <div class="j_AD">
+                <div class="j_ad_container">
+                    <div class="j_left">
+                        <h2 class="j_CtoA">Tired of feeling like a statistical inevitability?</h2>
+                        <p class="j_signup">Come join the cult of <span class="glitch jobuu">Jobu</span>, just click that button!
+                        </p>
+                        <p class="j_finetext">conditions include: willingess to staple your forehead, 
+                        mommy issues, and utter misery at existence
+                        </p>
+                    </div>
+                    <div class="j_right">
+                        <button class="ex glitch">Join!</button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="footer">
-            Copyright © WeLoveWaymond Inc.
+            <div class="j_footer">
+                Copyright © WeLoveWaymond Inc.
+            </div>
         </div>
         <script src="./javascript/javascript.js"></script>
     </body>
