Remove unnecessary styles, add functional links

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         <div class="header">
             <div class="top_h">
                 <div class="logo">     
-                   <img src="./images/logo.jpg" alt="googly" onClick="changePage()">
-                    
+                   <img src="./images/logo.jpg" alt="googly" onClick="changePage()">    
                 </div>
                     <ul>
-                    <li class="one"><a href="google.com">Alpha-verse</a></li>
+                    <li class="one"><a href="https://youtu.be/1tag9Pm3qtA">Alpha-verse</a></li>
                     <li class="two" onClick="changePage()"><a><span>EMBRACE THE BAGEL</span>EMBRACE THE BAGEL
                     <span>EMBRACE THE BAGEL</span></a></li>
-                    <li class="three"><a href="google.com">Our hope</a></li>
+                    <li class="three"><a href="https://youtu.be/-mu780uB7mI?t=458">Our hope</a></li>
                 </ul>
             </div>
             <div class="bottom_h">
@@ -33,7 +32,7 @@
                     <button class="button" onClick="changePage()">Join the fight?</button>
                 </div>
                 <div class="right-bot">
-                    <img src="./images/headergif.gif" alt="pride">
+                    <img src="./images/headergif.gif" alt="evelyn">
                 </div>
             </div>
         </div>
@@ -99,8 +98,8 @@
                         <img src="./images/logo.jpg" class="logo" onClick="changePage()" alt="googly">
                     </div>
                     <ul>
-                        <li><a>Why</a></li>
-                        <li><a><span class="glitch even">even</span></a></li>
+                        <li onClick="changePage()"><a>Why</a></li>
+                        <li><a><span class="glitch even" onClick="changePage()">even</span></a></li>
                         <li class="bother" onClick="changePage()"><a><span>bother?</span>bother?<span>bother?</span></a></li>
                     </ul>
                 </div>
@@ -168,7 +167,7 @@
                         <p class="j_signup">Come join the cult of <span class="glitch jobuu">Jobu</span>, just click that button!
                         </p>
                         <p class="j_finetext">conditions include: willingess to staple your forehead, 
-                        mommy issues, and utter misery at existence
+                        mommy issues, and misery towards existence
                         </p>
                     </div>
                     <div class="j_right">
